# rusty-ecu

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: config.toml
ecu-core/: Cargo.toml
ecu-core/src/: engine.rs  input.rs  lib.rs  lighting.rs  modeling.rs
ecu-sim/: Cargo.toml
ecu-sim/src/: main.rs  stub.rs  ui.rs
ecu-stm32/: Cargo.toml  Embed.toml  build.rs  memory.x
ecu-stm32/src/: hardware.rs  main.rs
math/: engine-sim.ipynb
